--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "async": "^3.1.0"
+    "async": "^3.1.0",
+    "selfsigned": "^1.10.7"
   },
   "devDependencies": {
     "@mdbarr/skyfall": "^0.2.0",
@@ -17,7 +18,7 @@
     "jest": "^24.9.0"
   },
   "scripts": {
-    "lint": "eslint --cache index.js test/mesh.test.js",
+    "lint": "eslint --cache index.js mesh.test.js",
     "test": "yarn lint && jest"
   }
 }
