--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mdbarr/skyfall": "^0.2.7",
     "barrkeep": "^2.3.0",
     "eslint": "^6.5.1",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "lint": "eslint --cache index.js mesh.test.js",
